--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-   <div id="root"></div>
-   <script src="dist/bundle.js"></script> 
+   <div id="root">test</div>
+   <script src="dist/main.bundle.js"></script> 
 </body>
 </html>
