--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 <body>
-   <div id="root">test</div>
-   <script src="dist/main.bundle.js"></script> 
+   <div id="root" data-js-module="m-carousel">test</div>
+   <script src="/dist/common.bundle.js" defer></script>
+   <script src="/dist/main.bundle.js" defer></script>
+   <script src="/dist/modules.bundle.js" defer></script>
 </body>
 </html>
